[package]
name = "ssh-control"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssh_control"
path = "src/main.rs"

[lib]
name = "ssh_control"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
log = "0.4.17"
nom = "7.1.3"
passfd = "0.1.5"

env_logger = "0.10.0"
